--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -15,7 +15,45 @@
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="0dp"
-                  android:layout_weight="3">
+                  android:layout_weight="3"
+                  android:gravity="bottom"
+                  android:orientation="vertical">
 
+        <include
+                layout="@layout/partial_session_info"/>
+
+        <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="40dp"
+                android:paddingBottom="20dp"
+                android:gravity="center">
+
+            <com.baott.trackme.ui.views.CustomImageView
+                    android:id="@+id/mBtnPause"
+                    android:layout_width="@dimen/ic_width_base"
+                    android:layout_height="@dimen/ic_height_base"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/ic_pause"/>
+
+            <com.baott.trackme.ui.views.CustomImageView
+                    android:id="@+id/mBtnResume"
+                    android:layout_width="@dimen/ic_width_base"
+                    android:layout_height="@dimen/ic_height_base"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:src="@drawable/ic_resume"/>
+
+            <com.baott.trackme.ui.views.CustomImageView
+                    android:id="@+id/mBtnStop"
+                    android:layout_width="@dimen/ic_width_base"
+                    android:layout_height="@dimen/ic_height_base"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+
+                    android:src="@drawable/ic_stop"/>
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
