--- a/app/src/main/res/layout/partial_session_info.xml
+++ b/app/src/main/res/layout/partial_session_info.xml
@@ -69,7 +69,7 @@
     </LinearLayout>
 
     <com.baott.trackme.ui.views.CustomTextView
-            android:id="@+id/mTvTime"
+            android:id="@+id/mTvDuration"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
