--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -44,6 +44,7 @@
                     android:layout_height="@dimen/ic_height_base"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
+                    android:visibility="gone"
                     android:src="@drawable/ic_resume"/>
 
             <com.baott.trackme.ui.views.CustomImageView
@@ -52,7 +53,7 @@
                     android:layout_height="@dimen/ic_height_base"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
-
+                    android:visibility="gone"
                     android:src="@drawable/ic_stop"/>
         </LinearLayout>
     </LinearLayout>
