--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -5,6 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         tools:context=".ui.activities.record.RecordActivity">
 
     <fragment android:id="@+id/mMap"
@@ -12,6 +13,10 @@
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_weight="5"/>
+
+    <View android:layout_width="match_parent"
+          android:layout_height="1dp"
+          android:background="@color/divider"/>
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="0dp"
