--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,9 +11,7 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/mRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:padding="10dp"/>
+            android:layout_height="match_parent"/>
 
     <com.baott.trackme.ui.views.CustomTextView
             android:id="@+id/mTvNoHistory"
@@ -24,6 +22,7 @@
             android:gravity="center"
             android:maxLines="2"
             android:ellipsize="end"
+            android:visibility="gone"
             android:padding="@dimen/padding_base"
             android:text="@string/session_no_history"
             android:textColor="@color/grey"/>
@@ -38,5 +37,9 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:src="@drawable/ic_record"/>
+
+    <include
+            android:id="@+id/mViewLoading"
+            layout="@layout/partial_loading"/>
 
 </RelativeLayout>
